Data Transfer's modifier Face Corner Custom Normals Tranfer don't work as expected #116069

Closed
opened 2023-12-12 00:32:55 +01:00 by Taiseibutsu · 3 comments

System Information
Operating system: Windows 10
Graphics card: GTX1080ti

Blender Version
Broken: 4.1
Worked: 4.0

Short description of error

Data Transfer Face Corner Data Custom Normals Tranfer does not work as intended.

image

Data Transfer required Auto-Smooth, that is no longer supported. I suspect this could be the root of the issue.

Exact steps for others to reproduce the error

Open attached .blend with Blender 4.0 and with 4.1.

**System Information** Operating system: Windows 10 Graphics card: GTX1080ti **Blender Version** Broken: 4.1 Worked: 4.0 **Short description of error** Data Transfer Face Corner Data Custom Normals Tranfer does not work as intended. ![image](/attachments/a1c36752-8407-4526-9262-2d75dc271886) *Data Transfer required Auto-Smooth, that is no longer supported. I suspect this could be the root of the issue.* **Exact steps for others to reproduce the error** Open attached .blend with Blender 4.0 and with 4.1.
Taiseibutsu added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-12 00:32:56 +01:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Pratik Borhade added
Module
Modeling
Priority
High
and removed
Priority
Normal
labels 2023-12-12 04:27:31 +01:00
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-12 04:33:48 +01:00
Member

89e3ba4e25 , 451c054d9b caused this.
@HooglyBoogly hi, can you check?

89e3ba4e25 , 451c054d9b7d3148a646caa5a72fb127a5b5c408 caused this. @HooglyBoogly hi, can you check?
Hans Goudey self-assigned this 2023-12-13 03:28:04 +01:00
Member

It only fails if the subdivision modifier preceeds the transfer modifier

It only fails if the subdivision modifier preceeds the transfer modifier
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-21 20:54:34 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-21 20:54:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116069
No description provided.