Fix #116069: Incorrect data transfer custom normals behavior

Mistake in 89e3ba4e25c9ff921b25 and 451c054d9b7d3148a646. Though I'm not
exactly sure why, it looks like the result layer needs to be filled with
"default" values before the transfer.